--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
@@ -28,12 +29,16 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "express": "^4.16.2",
+    "zone.js": "~0.8.26",
+    "postinstall": "ng build --aot -prod",
+    "heroku-postbuild": "ng build --prod",
+    "@angular/cli": "~7.0.4",
+    "@angular/compiler-cli": "~7.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.0",
+   
     "@angular/language-service": "~7.0.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
@@ -49,6 +54,12 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "enhanced-resolve":"3.3.0"
+  },
+  "engines": {
+    "node":"8.10.0",
+    "npm":"3.5.2"
   }
+
 }
